--- a/tools.html
+++ b/tools.html
@@ -26,7 +26,7 @@
 					排名不分先后.
 				</p>
 				<p>
-					 <a class="btn btn-primary btn-large" href="http://my.ykmimi.com">Back to index</a>
+					 <a class="btn btn-primary btn-large" href="http://deadzq.github.io">Back to index</a>
 				</p>
 			</div>
 		</div>
