--- a/tools/tools.html
+++ b/tools/tools.html
@@ -31,6 +31,27 @@
 			</div>
 		</div>
 	</div>
+	
+	<div class="row clearfix">
+		<div class="col-md-4 column">
+			<h3>
+				搜书,搜教程
+			</h3>
+			<ul>
+				<li>
+					https://www.jiumodiary.com/  鸠摩搜索
+				</li>
+				<li>
+					http://www.panduoduo.net/　盘多多
+				</li>
+				<li>
+					https://www.wdl.org/zh/  世界数字图书馆*
+				</li>
+				<li>
+					http://www.gutenberg.org/　古登堡
+				</li>
+			</ul>
+		</div>
 	<div class="row clearfix">
 		<div class="col-md-4 column">
 			<h3>
@@ -68,6 +89,9 @@
 				零散工具类
 			</h3>
 			<ul>
+				<li>
+					https://unbug.github.io/codelf/  程序变量取名
+				</li>
 				<li>
 					https://jsfiddle.net/  在线js编程
 				</li>
