--- a/tools/tools.html
+++ b/tools/tools.html
@@ -365,6 +365,9 @@
 					https://www.pexels.com/ 免费高清大图
 				</li>
 				<li>
+					https://pixabay.com 免费高清大图
+				</li>
+				<li>
 					https://www.easyicon.net/  图标网
 				</li>
 				<li>
