--- a/tools/tools.html
+++ b/tools/tools.html
@@ -133,6 +133,10 @@
 				零散工具类
 			</h3>
 			<ul>
+
+				<li>
+					https://dbdiagram.io/home/   在线数据库建立(mysql,postgresql)
+				</li>
 				<li>
 					https://unbug.github.io/codelf/  程序变量取名
 				</li>
