--- a/tools/tools.html
+++ b/tools/tools.html
@@ -237,7 +237,13 @@
 			</h3>
 			<ul>
 				<li>
-					http://linggle.com/ 英语写作学习
+					http://www.199it.com/  互联网数据资讯网
+				</li>
+				<li>
+					https://www.ixueshu.com/  爱学术
+				</li>
+				<li>
+					http://linggle.com/  英语写作学习
 				</li>
 				<li>
 					http://www.duolingo.cn/  英语学习
