--- a/tools/tools.html
+++ b/tools/tools.html
@@ -19,12 +19,7 @@
 				<h1>
 					Hello, mate!
 				</h1>
-				<p>
-					一路保存但没有来得及看的网站,整理和分享出来.<br>
-					为了让自己以及浏览者珍惜每个网站所分享的知识而不是一个一个草草看完以及对每个网站的建立者表示尊重,这里不添加a标签进行跳转.
-					希望查看的朋友可以在浏览器中手动查询.<br>
-					排名不分先后.
-				</p>
+		
 				<p>
 					 <a class="btn btn-primary btn-large" href="http://deadzq.github.io">Back to index</a>
 				</p>
@@ -50,6 +45,17 @@
 				<li>
 					http://www.gutenberg.org/　古登堡
 				</li>
+			</ul>
+		</div>
+				<div class="col-md-4 column">
+			<h3>
+				他(她)们的技术博客
+			</h3>
+			<ul>
+				<li>
+					http://calamus.wiki/  calamus
+				</li>
+		
 			</ul>
 		</div>
 		<div class="col-md-4 column">
