--- a/tools/tools.html
+++ b/tools/tools.html
@@ -64,6 +64,9 @@
 			</h3>
 			<ul>
 				<li>
+					https://bihu.com/  币乎
+				</li>
+				<li>
 					https://evaio.info/  电动汽车分布式数据库及应用平台evaio
 				</li>
 				<li>
@@ -150,6 +153,12 @@
 				</li>
 				<li>
 					https://tool.lu/　在线工具
+				</li>
+				<li>
+					https://www.iconfont.cn/　图标(国标)
+				</li>
+				<li>
+					https://www.easyicon.net/　图标(个性)
 				</li>
 				<li>
 					https://cloudconvert.com/  格式转换
@@ -239,6 +248,9 @@
 				学渣提升类
 			</h3>
 			<ul>
+				<li>
+					https://www.icourse163.org/  中国大学MOOC
+				</li>  
 				<li>
 					http://www.199it.com/  互联网数据资讯网
 				</li>
