--- a/tools/tools.html
+++ b/tools/tools.html
@@ -34,6 +34,9 @@
 			</h3>
 			<ul>
 				<li>
+					https://tophub.today/  今日热榜
+				</li>
+				<li>
 					https://www.jiumodiary.com/  鸠摩搜索
 				</li>
 				<li>
