--- a/tools/tools.html
+++ b/tools/tools.html
@@ -48,6 +48,9 @@
 				<li>
 					http://www.gutenberg.org/　古登堡
 				</li>
+				<li>
+					https://www.zoomeye.org/　 zoomeye
+				</li>
 			</ul>
 		</div>
 				<div class="col-md-4 column">
@@ -270,7 +273,7 @@
 					http://www.duolingo.cn/  英语学习
 				</li>
 				<li>
-					Facilisis in pretium nisl aliquet
+					https://www.bilibili.com/  哔哩哔哩
 				</li>
 				<li>
 					Nulla volutpat aliquam velit
@@ -366,7 +369,7 @@
 					https://www.lumosity.com/  益智小游戏
 				</li>
 				<li>
-					https://www.bilibili.com/  
+					https://www.cupfox.com/ 美剧
 				</li>
 				<li>
 					Facilisis in pretium nisl aliquet
