--- a/tools/tools.html
+++ b/tools/tools.html
@@ -116,7 +116,7 @@
 		</div>
 		<div class="col-md-4 column">
 			<h3>
-				编程入门类
+				编程类
 			</h3>
 			<ul>
 				<li>
@@ -143,6 +143,10 @@
 				<li>
 					https://python123.io/  Python学习
 				</li>
+				<li>
+					http://www.jtthink.com/  Go,Rust
+				</li>
+
 			</ul>
 		</div>
 		<div class="col-md-4 column">
