--- a/tools/tools.html
+++ b/tools/tools.html
@@ -62,8 +62,12 @@
 					http://calamus.wiki/  calamus
 				</li>
 				<li>
-					http://blog.nczkevin.com/
+					http://blog.nczkevin.com/  nczkevin
 				</li>
+				<li>
+					http://www.yebangyu.org/  yebangyu
+				</li>
+				
 		
 			</ul>
 		</div>
